--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-
-djongo==1.3.6
 django==3.2
 djangorestframework<3.15
 djangorestframework-simplejwt<5.3
@@ -12,5 +10,8 @@ reportlab<4.1
 pylint<2.14
 pytest<7.3
 pytest-django
+argon2
+pymongo
+dnspython
 # pymongo[snappy,gssapi,srv,tls]
 mongoengine==0.25
